--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,1 +1,14 @@
-@import url('https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css');
+
+
+:host{
+    position: absolute;
+    top: 30%;
+    left: 40%;
+    margin-top: -50px;
+    margin-left: -50px;
+    width: 400px;
+    height: 400x;
+
+
+}
+    
