--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 
 
-<div>Formulario</div>
+
 <form #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm.value)" method="POST">
   <div class="form-group">
     <label for="exampleInputEmail1">Email address</label>
@@ -9,7 +9,7 @@
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" #Password ngModel name="Password" placeholder="Password">
+    <input type="text" class="form-control" #Password ngModel name="Password" placeholder="Password">
   </div>
   <div class="form-check">
     <input type="checkbox" name="kepp" class="form-check-input">
