--- a/frontend/src/app/components/sign-up/sign-up.component.html
+++ b/frontend/src/app/components/sign-up/sign-up.component.html
@@ -66,13 +66,13 @@
             <legend class="col-form-label col-sm-2 pt-0">Genre</legend>
             <div class="col-sm-10">
               <div class="form-check">
-                <input class="form-check-input" type="radio" name="genre" id="gridRadios1" value="option1" checked>
+                <input class="form-check-input" type="radio" name="genre" id="gridRadios1" value="M" [(ngModel)]="form.genre" checked>
                 <label class="form-check-label" for="gridRadios1">
                   Male
                 </label>
               </div>
               <div class="form-check">
-                <input class="form-check-input" type="radio" name="genre" id="gridRadios2" value="option2">
+                <input class="form-check-input" type="radio" name="genre" id="gridRadios2" [(ngModel)]="form.genre" value="F">
                 <label class="form-check-label" for="gridRadios2">
                   Female
                 </label>
