--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,8 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-between">
+<nav class="navbar navbar-expand-lg navbar-light justify-content-between" style="background-color: #6795b7;">
   <a class="navbar-brand">EasySpeaker</a>
   <div>
-    <a class="navbar-brand" routerLink="login">Login</a>
-    <a class="navbar-brand" routerLink="signup">Sign Up</a>
-  </div>
-  
+    <a i18n="app@@linkLogin" class="navbar-brand" routerLink="login">Ingresar</a>
+    <a i18n="app@@linkRegister" class="navbar-brand" routerLink="signup">Registracion</a>
+  </div>  
 </nav>
