registration teacher , table creation model

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,11 @@
-<app-navbar></app-navbar>
-
-<div class="container">
+<app-navbar>
+  <!-- app idioma -->
+  <!-- app nombre apellido -->
+</app-navbar>
+<ng-snotify></ng-snotify>
+<div class="container-fluid" style="padding-left: 0px!important;">
   <router-outlet></router-outlet>
 </div>
+
+
 
