--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -1,3 +1,24 @@
-<div class="container">
-    {{ username }}
-</div> 
+<!-- <div class="container">-->
+    <div class="wrapper">
+        <!-- Sidebar -->
+        <nav id="sidebar">
+            <app-search-bar></app-search-bar>
+        </nav>
+
+        <!-- Page Content -->
+        <div id="content">
+            <div id="content">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <div class="container-fluid">            
+                        <button type="button" id="sidebarCollapse" class="btn btn-info" (click)="showPanel()">
+                            <i class="fas fa-align-left"></i>
+                            <span>Iniciar Busqueda</span>
+                        </button>
+            
+                    </div>
+                </nav>
+            </div>
+            <!-- We'll fill this with dummy content -->
+        </div>
+    </div>
+<!--</div>-->
