Cambio teacher components con lista

--- a/frontend/src/app/components/teachers/teachers.component.html
+++ b/frontend/src/app/components/teachers/teachers.component.html
@@ -1,9 +1,1 @@
-<div class="container">
-  <ul>
-    <li *ngFor="let teacher of teachers">
-      {{teacher.name}}, {{teacher.lastname}}, {{teacher.email}}
-    </li>
-  </ul>
-
-</div> 
-
+<app-list-teachers-info></app-list-teachers-info>
