--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,11 +1,11 @@
-<app-navbar>
-  <!-- app idioma -->
-  <!-- app nombre apellido -->
-</app-navbar>
-<ng-snotify></ng-snotify>
-<div class="container-fluid" style="padding-left: 0px!important;">
+<div class="container"  style="margin:0; padding: 0px!important;">
+  <app-navbar></app-navbar>
+  <ng-snotify></ng-snotify>
+  <app-header></app-header>
+  <div style="display:inline-block" *ngIf="loggedIn">
+    <app-teachers></app-teachers>
+    <app-meeting-places></app-meeting-places>
+  </div>
+  
   <router-outlet></router-outlet>
 </div>
-
-
-
