--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="mt-4 col-8 offset-2">
+<div class="mt-4 col-6 offset-2">
   <div class="card">
     <div class="card-header">
       Login
@@ -9,7 +9,7 @@
           {{error}}
         </div> 
         <div class="form-group row">
-          <label for="exampleInputEmail1" class="col-sm-2 col-form-label">Email address</label>
+          <!--<label for="exampleInputEmail1" class="col-sm-2 col-form-label">Email address</label>-->
           <div class="col-sm-10">
             <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email"
               [(ngModel)]="form.email" required>
@@ -17,7 +17,8 @@
           <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
         </div>
         <div class="form-group row">
-          <label for="exampleInputPassword1" class="col-sm-2 col-form-label">Password</label>
+          <!--<label for="exampleInputPassword1" class="col-sm-2 col-form-label">Password</label>-->
+          
           <div class="col-sm-10">
             <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password" [(ngModel)]="form.password"
               required>
