--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light justify-content-between" style="background-color: #6795b7;">
+<nav class="navbar navbar-expand-lg navbar-light justify-content-between" style="background-color: #6795b7;" *ngIf="!loggedIn">
   <a class="navbar-brand">EasySpeaker</a>
   <div><a class="navbar-brand" routerLink="sign-up-teacher">Conviertete en Profesor!</a></div>
   <div><select name="language" id="language">
@@ -8,7 +8,7 @@
     <option value="3">Francais</option>
   </select></div>
   <div>
-        <a class="navbar-brand" *ngIf="loggedIn">{{ user }}</a>
+        <!--<a class="navbar-brand" *ngIf="loggedIn">{{ user }}</a>-->
         <a i18n="app@@linkLogin" class="navbar-brand" routerLink="login" *ngIf="!loggedIn">Ingresar</a>
         <a i18n="app@@linkLogin" class="navbar-brand" href="#" (click)="logout($event)" *ngIf="loggedIn">Salir</a>
         <a i18n="app@@linkRegister" class="navbar-brand" routerLink="signup" *ngIf="!loggedIn">Registracion</a>
