--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,154 +1,31 @@
-<!-- nav -->
-<nav class="sidebar">
-  <div class="nav-header">
-    <div class="logo-wrap">
-      <a class="logo-icon" href="/">
-        <img alt="logo-icon" src="http://mediahawkz.com/assets/images/favicons/apple-icon-72x72.png" width="40">
+<mat-toolbar *ngIf="loggedIn">
+  <mat-toolbar-row>
+    <button mat-icon-button (click)="showPanel()" fxShow="true" fxHide.gt-sm>
+      <mat-icon>menu</mat-icon>
+    </button>
+    <span>Easyspeaker</span>
+    <span class="example-spacer"></span>
+    <div fxShow="true" fxHide.lt-md="true" style="float: right;">
+      <!-- The following menu items will be hidden on both SM and XS screen sizes -->
+      <a href="#" mat-button>
+        <mat-icon>notifications</mat-icon>
+        Notifications
       </a>
-      <a class="logo-text" href="/">Easyspeaker</a>
-    </div>
-
-    <div class="nav-search">
-      <div class="search">
-        <i class="material-icons">search</i>
-        <input type="search" name="search" placeholder="Search">
-      </div>
-    </div>
-  </div>
-  <ul class="nav-categories ul-base">
-    <li>Datos search</li>
-  </ul>
-  <ul class="social ul-base">
-    <li>
-      <a href="/" class="twitter" target="_blank">
-        <i class="fa fa-twitter"></i>
+      <a href="#" mat-button>
+        <mat-icon>message</mat-icon>
+        Messages
       </a>
-    </li>
-    <li>
-      <a href="/" class="facebook" target="_blank">
-        <i class="fa fa-facebook"></i>
+      <a href="#" mat-button>
+        <mat-icon>account_box</mat-icon>
+       {{user}}
       </a>
-    </li>
-    <li>
-      <a href="/" class="google-plus" target="_blank">
-        <i class="fa fa-google-plus"></i>
-      </a>
-    </li>
-    <li>
-      <a href="/" class="rss" target="_blank">
-        <i class="fa fa-rss"></i>
-      </a>
-    </li>
-  </ul>
-  <div class="copyright">
-    <span>&copy; 2016
-      <a href="/" class="link">Easyspeaker.com</a> Made in Argentina</span>
-    <span>Designed by
-      <a href="/" target="_blank">Gustavo Gonzalez</a>
-    </span>
-  </div>
-</nav>
-<!-- @end nav -->
-
-<!-- header -->
-<header  *ngIf="loggedIn">
-  <div class="header-inner clearfix">
-    <div class="nav-btn nav-slider" (click)="initComponents()">
-      <i class="material-icons">menu</i>
-    </div>
-    <div class="header-logo">
-      <a href="/">
-        Easyspeaker
+      <a href="#" mat-button
+         (click)="logout($event)">
+        <mat-icon>logout</mat-icon>
+        Salir
       </a>
     </div>
-    <div class="header-categories">
-      <ul class="ul-base">
-        <!--<li class="dropdown">
-          <a class="dropdown-toggle" (click)="dropdown()" href="#">
-            <span>Categories</span>
-            <i class="material-icons">keyboard_arrow_down</i>
-          </a>
-          <ul class="dropdown-menu ul-base">
-            <li>
-              <a href="http://www.mediahawkz.com/topic/technology">Technology</a>
-            </li>
-            <li>
-              <a href="http://www.mediahawkz.com/topic/science">Science</a>
-            </li>
-            <li>
-              <a href="http://www.mediahawkz.com/topic/speak-up">Speak up</a>
-            </li>
-            <li>
-              <a href="http://www.mediahawkz.com/topic/general">General</a>
-            </li>
-            <li>
-              <a href="http://www.mediahawkz.com/topic/lifestyle">Lifestyle</a>
-            </li>
-            <li>
-              <a href="http://www.mediahawkz.com/topic/world">World</a>
-            </li>
-            <li>
-              <a href="http://www.mediahawkz.com/topic/business">Business</a>
-            </li>
-            <li>
-              <a href="http://www.mediahawkz.com/topic/entertainment">Entertainment</a>
-            </li>
-            <li>
-              <a href="http://www.mediahawkz.com/topic/sports">Sports</a>
-            </li>
-          </ul>
-        </li>-->
-      </ul>
-    </div>
-    <div class="header-search">
-      <div class="search">
-        <i class="material-icons">search</i>
-        <input type="search" name="search" placeholder="Search">
-      </div>
-    </div>
-    <div class="header-menu">
-      <ul class="ul-base">
-        <li>
-          <a href="https://twitter.com/MediahawkZ" class="twitter" target="_blank">
-            <i class="fa fa-twitter"></i>
-          </a>
-        </li>
-        <li>
-          <a href="https://www.facebook.com/mediahawkz" class="facebook" target="_blank">
-            <i class="fa fa-facebook"></i>
-          </a>
-        </li>
-        <li>
-          <a href="https://plus.google.com/+MediahawkzIndia" class="google-plus" target="_blank">
-            <i class="fa fa-google-plus"></i>
-          </a>
-        </li>
-        <li>
-          <a href="http://www.mediahawkz.com/rss" class="rss" target="_blank">
-            <i class="fa fa-rss"></i>
-          </a>
-        </li>
-        <li>
-          <a href="#" class="" target="_blank" >
-              {{user}}
-          </a>
-        </li>
-        <li>
-          <a i18n="app@@linkLogin" class="" href="#" (click)="logout($event)" *ngIf="loggedIn">Salir</a>
-        </li>
-
-      </ul>
-    </div>
-  </div>
-</header>
-<!-- @end header -->
-
-<!-- Main content -->
-<main role="main"></main>
-<!-- @end main -->
-
-<!-- Footer -->
-<footer></footer>
-<!-- @end footer -->
+  </mat-toolbar-row>
+</mat-toolbar>
 
 <div class="overlay"></div>
