--- a/frontend/src/app/components/profile/profile.component.css
+++ b/frontend/src/app/components/profile/profile.component.css
@@ -4,15 +4,22 @@
     align-items: stretch;
 }
 
+#content {
+    width: 100%;
+}
 #sidebar {
     min-width: 250px;
     max-width: 250px;
     min-height: 100vh;
 }
 
-#sidebar.active {
+#sidebar.inactive {
     margin-left: -250px;
 }
+#sidebar.active {
+    margin-left: 0px;
+}
+
 
 @media (max-width: 768px) {
     #sidebar {
