--- a/frontend/src/app/components/maps/maps.component.html
+++ b/frontend/src/app/components/maps/maps.component.html
@@ -1,5 +1,6 @@
 <!-- this creates a google map on the page with the given lat/lng from -->
 <!-- the component as the initial center of the map: -->
+<!--(boundsChange)="checkMarkersInBounds($event)"-->
 <div class="container">
 <agm-map 
     [latitude]="lat"
@@ -8,18 +9,24 @@
     [zoom]="zoom"
     [zoomControl]="true"
     (mapClick)="mapClicked($event)"
-    (boundsChange)="checkMarkersInBounds($event)">
+    (zoomChange)="updateMarkers($event)"
+    >
      
-    <agm-marker *ngFor="let m of markers; let i = index" 
+    <agm-marker *ngFor="let m of filteredMarkers; let i = index" 
       (markerClick)="clickedMarker(m.label, i)" 
       [latitude]="m.lat"
       [longitude]="m.lng"
-      [label]="m.username" 
+      [label]="m.username"
       [markerDraggable]="m.draggable" 
       (dragEnd)="markerDragEnd(m, $event)">
     
       <agm-info-window>
-        <strong>InfoWindow content</strong>
+        <div>
+          <h5><strong>{{ m.username }} {{ m.lastname }}</strong></h5>
+          <p>Native langauge: {{ m.native_language }}</p>
+          <p>Price per Hour: {{m.price}}</p>
+      </div>
+
       </agm-info-window>
     
     </agm-marker>
