--- a/frontend/src/app/components/list-teachers-info/list-teachers-info.component.html
+++ b/frontend/src/app/components/list-teachers-info/list-teachers-info.component.html
@@ -39,6 +39,7 @@
         <mat-card-actions>
           <button mat-button>LIKE</button>
           <button mat-button>SHARE</button>
+          <button mat-button (click)="getReviewByTeacher()">See reviews</button>
         </mat-card-actions>
       </mat-card>
     </li>
