--- a/frontend/src/app/components/list-teachers-info/list-teachers-info.component.html
+++ b/frontend/src/app/components/list-teachers-info/list-teachers-info.component.html
@@ -24,7 +24,6 @@
           <img mat-card-image>
         </div>
         <mat-card-header>
-          
           <mat-card-title> {{teacher.username}}, {{teacher.lastname}}</mat-card-title>
           <mat-card-subtitle>Profesor de la comunidad</mat-card-subtitle>
         </mat-card-header>
@@ -39,7 +38,7 @@
         <mat-card-actions>
           <button mat-button>LIKE</button>
           <button mat-button>SHARE</button>
-          <button mat-button (click)="getReviewByTeacher()">See reviews</button>
+          <app-reviews [teacher] = teacher.reviews ></app-reviews>
         </mat-card-actions>
       </mat-card>
     </li>
