--- a/frontend/src/app/components/profile/profile.component.css
+++ b/frontend/src/app/components/profile/profile.component.css
@@ -91,3 +91,7 @@ ul ul a {
   /*  padding-left: 30px !important;*/
     background: #6d7fcc;
 }
+
+.bg-light{
+    background-color: #ffffff !important ;
+}
