--- a/frontend/src/app/components/list-teachers-info/list-teachers-info.component.html
+++ b/frontend/src/app/components/list-teachers-info/list-teachers-info.component.html
@@ -8,13 +8,11 @@
       </mat-option>
     </mat-select>
   </mat-form-field>
-  <button mat-button (click)= "reset()">Clear</button>
- 
-  <mat-radio-group aria-label="Select an option">
+  <!--<mat-radio-group aria-label="Select an option">
     <mat-radio-button value="1">Option 1</mat-radio-button>
     <mat-radio-button value="2">Option 2</mat-radio-button>
-  </mat-radio-group>
- 
+  </mat-radio-group>-->
+  <button mat-button (click)= "reset()">Clear</button>
   <h5><span [(matBadge)]="teachersCount" matBadgeOverlap="false">Teachers available in your area</span></h5>
   
   <ul>
@@ -26,6 +24,7 @@
         <mat-card-header>
           <mat-card-title> {{teacher.username}}, {{teacher.lastname}}</mat-card-title>
           <mat-card-subtitle>Profesor de la comunidad</mat-card-subtitle>
+
         </mat-card-header>
        <!-- <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">-->
         <mat-card-content>
@@ -33,6 +32,9 @@
           <p>
             Hi, I am Jaime!! If you are interesting on take class with me, then let me know!!!
           </p>
+        </mat-card-content>
+        <mat-card-content>
+          <b>Price</b>: {{ teacher.currency }} {{ teacher.price }} / h
         </mat-card-content>
         <mat-card-actions>
           <button mat-button>LIKE</button>
