Change mongo DB, update components, services

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,8 +1,9 @@
 <mat-toolbar *ngIf="loggedIn">
   <mat-toolbar-row>
-    <button mat-icon-button (click)="showPanel()" fxShow="true" fxHide.gt-sm>
+    <!--<button mat-icon-button (click)="showPanel()" fxShow="true" fxHide.gt-sm>
       <mat-icon>menu</mat-icon>
-    </button>
+    </button>-->
+    <img src="/assets/images/fb_transparent.png" alt="Imagen">
     <span>Easyspeaker</span>
     <span class="example-spacer"></span>
     <div fxShow="true" fxHide.lt-md="true" style="float: right;">
