--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light justify-content-between" style="background-color: #25455c;" *ngIf="!loggedIn">
-  <a class="navbar-brand">EasySpeaker</a>
+<nav class="navbar navbar-expand-lg" *ngIf="!loggedIn">
+  <a class="navbar-brand">  EasySpeaker</a>
   <div><a class="navbar-brand" routerLink="sign-up-teacher">Conviertete en Profesor!</a></div>
   <div><select name="language" id="language">
     <option value="0">{{ titleLanguage }}</option>
