--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -1,10 +1,10 @@
 <!-- <div class="container">-->
     <div class="wrapper">
         <!-- Sidebar -->
-        <nav id="sidebar">
+       <!-- <nav id="sidebar">
            <app-search-bar></app-search-bar>
         </nav>
-
+        -->
         <!-- Page Content -->
        <div id="content">
             <div id="content">
