--- a/frontend/src/app/components/header/header.component.css
+++ b/frontend/src/app/components/header/header.component.css
@@ -1,5 +1,28 @@
+.mat-toolbar {
+    background: #055052;
+    color: #F3F2C9;
+}
+
 .mat-toolbar-row{
     display: block;
+    margin-top: 15px;
+}
+
+.mat-toolbar-row span {
+    margin-left: 10px;
+}
+
+.mat-toolbar-row a {
+    text-decoration: none;
+}
+.mat-toolbar-row a:hover{
+    
+    color:#003638  ;
+}
+
+.mat-toolbar-row img{
+    width: 50px;
+    height: 50px;
 }
 
 @media (max-width: 599px){
